// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/TreeView Complex 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-266"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-266"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-267"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-267"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-268"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    <div>
                      <button
                        aria-controls="fd-268"
                        aria-label="expand"
                        aria-pressed={false}
                        className="fd-tree__control"
                        onClick={[Function]}
                      />
                      Grandchild 1
                    </div>
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 2
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 3
                  </div>
                  <div
                    className="fd-tree__col"
                  >
                    Data Col 4
                  </div>
                </div>
                <ul
                  aria-hidden={true}
                  className="fd-tree__group fd-tree__group--sublevel-3 is-hidden"
                  role="group"
                >
                  <li
                    aria-expanded={false}
                    className="fd-tree__item"
                    id="fd-269"
                    role="treeitem"
                  >
                    <div
                      className="fd-tree__row"
                    >
                      <div
                        className="fd-tree__col fd-tree__col--control"
                      >
                        Great Grandchild 1
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 2
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 3
                      </div>
                      <div
                        className="fd-tree__col"
                      >
                        Data Col 4
                      </div>
                    </div>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-270"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-271"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-271"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-272"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-273"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-274"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-275"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-275"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 4
            </div>
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 2
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 3
          </div>
          <div
            className="fd-tree__col"
          >
            Data Col 4
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-276"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 2
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 3
              </div>
              <div
                className="fd-tree__col"
              >
                Data Col 4
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Primary 1`] = `
<div
  dir="ltr"
>
  <div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-258"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            Row 1
          </div>
        </div>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-259"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-259"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 2
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-260"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 1
              </div>
            </div>
          </li>
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-261"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                Child 2
              </div>
            </div>
          </li>
        </ul>
      </li>
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-262"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-262"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 3
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-263"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              >
                <div>
                  <button
                    aria-controls="fd-263"
                    aria-label="expand"
                    aria-pressed={false}
                    className="fd-tree__control"
                    onClick={[Function]}
                  />
                  Child 1
                </div>
              </div>
            </div>
            <ul
              aria-hidden={true}
              className="fd-tree__group fd-tree__group--sublevel-2 is-hidden"
              role="group"
            >
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-264"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 1
                  </div>
                </div>
              </li>
              <li
                aria-expanded={false}
                className="fd-tree__item"
                id="fd-265"
                role="treeitem"
              >
                <div
                  className="fd-tree__row"
                >
                  <div
                    className="fd-tree__col fd-tree__col--control"
                  >
                    Grandchild 2
                  </div>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Component API/TreeView Rich Tree View 1`] = `
<div
  dir="ltr"
>
  <div>
    <div
      className="fd-tree fd-tree--header"
    >
      <div
        className="fd-tree__row fd-tree__row--header"
      >
        <div
          className="fd-tree__col fd-tree__col--control"
        >
          <div>
            <button
              aria-label="expand all"
              aria-pressed={false}
              className="fd-tree__control"
              onClick={[Function]}
            />
            Column Header 1
          </div>
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 2
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 3
        </div>
        <div
          className="fd-tree__col"
        >
          Column Header 4
        </div>
      </div>
    </div>
    <ul
      aria-hidden={false}
      className="fd-tree"
      role="tree"
    >
      <li
        aria-expanded={false}
        className="fd-tree__item"
        id="fd-277"
        role="treeitem"
      >
        <div
          className="fd-tree__row"
        >
          <div
            className="fd-tree__col fd-tree__col--control"
          >
            <div>
              <button
                aria-controls="fd-277"
                aria-label="expand"
                aria-pressed={false}
                className="fd-tree__control"
                onClick={[Function]}
              />
              Row 1
            </div>
          </div>
        </div>
        <ul
          aria-hidden={true}
          className="fd-tree__group fd-tree__group--sublevel-1 is-hidden"
          role="group"
        >
          <li
            aria-expanded={false}
            className="fd-tree__item"
            id="fd-278"
            role="treeitem"
          >
            <div
              className="fd-tree__row"
            >
              <div
                className="fd-tree__col fd-tree__col--control"
              />
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.google.com"
                >
                  Google
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.bing.com"
                >
                  Bing
                </a>
              </div>
              <div
                className="fd-tree__col"
              >
                <a
                  href="http://www.yahoo.com"
                >
                  Yahoo
                </a>
              </div>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
